Recents: opening parent folder from File Properties window doesn't work
Affected versions
- Nightly flatpak: 46.alpha.0-8add7b89
- Other: nautilus-45.0-1.fc39.x86_64
Steps to reproduce
- Go to Recents
- Right click on a file > Properties
- Press the folder icon from the Parent Folder row
Current behavior
The file gets selected in the Recents view.
Expected behavior
Nautilus opening the actual file location.