properties-window: fix open parent for recents

Parent location for recent files always points to "recent://".
Instead, we should use the activation location to get the real parent
location. This behavior is similar to the "Open Item Location" context
menu action.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/3142